--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
     "file-loader": "^0.10.0",
@@ -37,7 +38,9 @@
     "pm2": "^2.3.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
+    "react-scrollbar": "^0.5.1",
     "redux": "^3.6.0",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
