problem identified, should now deploy correctly

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Quick and simple web-chat application implemented with React.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start index.js",
+    "stop": "pm2 stop index.js",
+    "update": "pm2 update index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -d --watch",
     "build": "webpack -p"
