--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2016": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
@@ -37,7 +38,6 @@
     "file-loader": "^0.10.0",
     "monk": "^3.1.4",
     "pm2": "^2.3.0",
-    "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
